--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,18 @@
 <footer class="site-footer" id="footer">
   <div class="container">
 
+    <div class="scrollup-container">
+        <div class="footer-logo">
+          <img src="images/logo-focus.svg" width="140" alt="Diode - Logo" />
+        </div>
+        <a class="button scrollup">
+          <i class="pe-7s-angle-up"></i>
+        </a>
+    </div>
     <div class="row">
       <div class="col-xs-12 col-lg-7">
         <div class="footer-menu">
+          <!-- Full menu -->
           {% for nav in site.navigation %}
             {% if nav.target %}
             {% elsif nav.subs %}
@@ -26,6 +35,8 @@
               </div>
             {% endif %}
           {% endfor %}
+
+          <!-- Quick menu -->
           <div class="footer-menu__col quick-menu">
             <a class="footer-link" href="javascript:;">QUIK LINKS</a>
               <ul>
@@ -50,7 +61,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row footer-bottom-1">
       <div class="col-xs-12 col-sm-4 col-md-6 col-lg-7">
         <div class="footer-logo">
           <img src="images/logo.svg" width="100" alt="Diode - Logo" />
@@ -66,7 +77,14 @@
             Privacy Policy
           </div>
         </div>
+      </div>
+    </div>
 
+    <div class="row footer-bottom-2">
+      <div class="col-xs-12">
+        <div class="footer-text">
+          All Right Reserved! DIODE © 2020 Copyright
+        </div>
       </div>
     </div>
 
