--- a/_scss/layout/_footer.scss
+++ b/_scss/layout/_footer.scss
@@ -11,8 +11,37 @@ footer.site-footer {
   color: $footer-color;
   background-color: $black-blue;
   width: 100%;
-  padding-top: 60px;
+  padding-top: 50px;
   padding-bottom: 40px;
+  .container {
+    position: relative;
+    .scrollup-container {
+      position: absolute;
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      .footer-logo {
+        display: none;
+      }
+      .scrollup {
+        width: 48px;
+        height: 48px;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+
+
+
+        i {
+          font-size: 38px;
+          font-weight: bold;
+          color: $web-blue
+        }
+      }
+    }
+  }
   .row {
     align-items: flex-start;
     // Footer menus
@@ -72,12 +101,6 @@ footer.site-footer {
     }
 
 
-    // Footer texts
-    .footer-logo {
-      img {
-        width: 100px;
-      }
-    }
     .footer-text {
       display: flex;
       justify-content: space-between;
@@ -91,12 +114,43 @@ footer.site-footer {
         background: $light-gray;
       }
     }
+
+    &.footer-bottom-2 {
+      display: none;
+    }
   }
-}
 
-@media (max-width: 720px) {
-  footer.site-footer {
+  // Footer texts
+  .footer-logo {
+    img {
+      width: 140px;
+    }
+  }
 
+  @media (max-width: 1199px) {
+    .container {
+      .scrollup-container {
+        position: inherit;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        .footer-logo {
+          display: block;
+        }
+      }
+      .row.footer-bottom-1 {
+        display: none;
+      }
+      .row.footer-bottom-2 {
+        display: block;
+        .footer-text {
+          justify-content: center;
+          padding-bottom: 20px;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 720px) {
     .row {
       .footer-menu {
         justify-content: center;
@@ -115,4 +169,6 @@ footer.site-footer {
       }
     }
   }
+
 }
+
