--- a/_scss/layout/_header-responsive.scss
+++ b/_scss/layout/_header-responsive.scss
@@ -69,7 +69,6 @@
           overflow-y: scroll;
           opacity: 1;
           background: $web-blue;
-          transform: translateY(100%);
           transition: transform 0.8s $transition-links-type;
           z-index: 99999999999999;
 
@@ -198,15 +197,15 @@
               border-radius: 1px;
             }
             i:nth-child(1) {
-              animation: sera-outT 0.8s backwards;
-              animation-direction:reverse;
+              // animation: sera-outT 0.8s backwards;
+              // animation-direction:reverse;
               margin-top: 9px;
               width: 36px;
             }
             i:nth-child(2) {
               margin: 11px 0 0 18px;
-              animation: sera-outM 0.8s backwards;
-              animation-direction:reverse;
+              // animation: sera-outM 0.8s backwards;
+              // animation-direction:reverse;
               width: 18px;
             }
 
