feat: hero section

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -100,6 +100,7 @@
         "layout/_sidebar",
         "layout/_offer",
         "layout/_tags",
+        "layout/_hero",
         "layout/_about",
         "layout/_features",
         "layout/_parallax-features",
