--- a/css/style.css
+++ b/css/style.css
@@ -4100,6 +4100,111 @@ section.offer-section .button {
 
 /**
  *
+ *  Hero Section Style
+ *
+ *  @package gleesik_layout
+ *
+ **/
+section.site-section.hero-section {
+  background-color: #2d3e50;
+  color: #fff;
+  background-image: url("/images/hero-right.png");
+  background-repeat: no-repeat;
+  background-position: right;
+  -webkit-background-size: 50% 50%;
+          background-size: 50%;
+}
+
+section.site-section.hero-section .container .row {
+  -webkit-box-pack: left;
+  -webkit-justify-content: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+
+section.site-section.hero-section .container .row .hero-title {
+  font-size: 3em;
+  line-height: 1.2;
+  position: relative;
+  margin-bottom: 30px;
+}
+
+section.site-section.hero-section .container .row .hero-title::after {
+  content: '';
+  position: absolute;
+  width: 220px;
+  background-color: #f15d2f;
+  height: 2px;
+  bottom: -7px;
+  left: 0;
+}
+
+section.site-section.hero-section .container .row .hero-subtitle {
+  font-size: 1.7em;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+section.site-section.hero-section .container .row .hero-description {
+  margin-bottom: 80px;
+}
+
+section.site-section.hero-section .container .row .company-name {
+  position: relative;
+  margin-right: 20px;
+}
+
+section.site-section.hero-section .container .row .company-name span {
+  position: absolute;
+  font-size: .6em;
+}
+
+section.site-section.hero-section .container .row .action-container {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+section.site-section.hero-section .container .row .action-container .action-link {
+  color: #fff;
+  font-size: 1.2rem;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+section.site-section.hero-section .container .row .action-container .action-link i {
+  font-weight: 700;
+  font-size: 1.6em;
+}
+
+section.site-section.hero-section .container .row .action-container .action-link:hover {
+  color: #f15d2f;
+}
+
+section.site-section.hero-section .container .row .action-container .action-descriptoin {
+  position: absolute;
+  bottom: -1.8em;
+  font-size: .58em;
+}
+
+/**
+ *
  *  About Section Style
  *
  *  @package gleesik_layout
