--- a/_includes/sections/hero.html
+++ b/_includes/sections/hero.html
@@ -16,7 +16,7 @@
           <a class="button action-button">
             Download <span class="company-name">dDrive<span>TM</span></span> for MacOS
           </a>
-          <a class="action-link" href="">
+          <a class="link link--white" href="">
             LEARN MORE
             <i class="pe-7s-angle-right"></i>
           </a>
