--- a/_scss/components/_buttons.scss
+++ b/_scss/components/_buttons.scss
@@ -31,7 +31,37 @@
     filter: drop-shadow(0px 0px 25px $orange);
   }
 
+  &--outline {
+    background-color: $white;
+    border: 2px solid $orange;
+  }
 }
+
+
+
+// Links
+.link {
+  font-size: $text-font-size-2;
+  text-transform: uppercase;
+  color: $orange;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-weight: 700;
+  i {
+    font-weight: 700;
+    font-size: 1.6em;
+  }
+  &:hover {
+    color: $orange;
+    filter: drop-shadow(0px 0px 25px $orange);
+  }
+
+  &--white {
+    color: $white;
+  }
+}
+
 
 // CTA Buttons
 .button-cta {
