--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -95,6 +95,7 @@
 @import "layout/_global",
         "layout/_header",
         "layout/_header-responsive",
+        "layout/_breadcrumbs",
         "layout/_highlight",
         "layout/_sections",
         "layout/_sidebar",
