feat: solution section

--- a/_includes/sections/solutions.html
+++ b/_includes/sections/solutions.html
@@ -1,47 +1,28 @@
-<!-- Features Section -->
-<section class="site-section section-focus features-section" id="features">
+<!-- Solutions Section -->
+<section class="site-section section-focus solutions-section" id="solutions">
   <div class="container">
+    <!-- Solutions Page Description -->
+    <h3 class="solution-section__description">{{ page.description }}</h3>
 
-    <!-- Features -->
-    {% for feature in page.features %}
+    <!-- Solutions Page Title -->
+    <h2 class="solution-section__title">{{ page.title }}</h2>
+
+    <!-- Solutions -->
     <div
-      class="row feature"
+      class="row"
     >
-      <div class="feature-content col-xs-12 col-sm-7 col-md-8">
-        <h3 class="feature-title">
-          {{ feature.title }}
-        </h3>
-        <p class="feature-description">
-          {{ feature.description }}
-        </p>
-        <a class="feature-link link" href="{{ feature.link-url }}">
-          {{ feature.link-text }}
-          <i class="pe-7s-angle-right"></i>
-        </a>
+    {% for solution in page.solutions %}
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="solution">
+          <h4 class="solution-title">
+            {{ solution.title }}
+          </h4>
+          <p class="solution-description">
+            {{ solution.description }}
+          </p>
+        </div>
       </div>
-      <div
-        class="feature-icon col-xs-0 col-sm-5 col-md-4"
-      >
-        {% include {{ feature.icon }} %}
-      </div>
-    </div>
     {% endfor %}
-
-    <!-- CONTACT US and LEARN MORE -->
-
-    <div class="feature-more row">
-      <div class="col-xs-12 col-sm-6">
-        <a class="contact-button button button--outline">
-          CONTACT US
-        </a>
-      </div>
-      <div class="col-xs-12 col-sm-6">
-        <a class="link">
-          LEARN MORE
-          <i class="pe-7s-angle-right"></i>
-        </a>
-      </div>
     </div>
-
   </div>
 </section>
