--- a/_scss/layout/_blog.scss
+++ b/_scss/layout/_blog.scss
@@ -8,6 +8,7 @@
 
 section.blog-section {
   padding: 150px 0;
+  background-color: $web-gray;
 
   .row {
     align-items: initial;
@@ -215,6 +216,7 @@ section.blog-section {
           max-width: 100%;
           height: auto;
           margin-bottom: 1em;
+          background-color: $white;
 
           a {
             width: 100%;
