--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -104,6 +104,8 @@
         "layout/_hero",
         "layout/_about",
         "layout/_features",
+        "layout/_solutions",
+        "layout/_solutions-download",
         "layout/_parallax-features",
         "layout/_blog",
         "layout/_team",
