--- a/_scss/modules/_color-skin.scss
+++ b/_scss/modules/_color-skin.scss
@@ -14,6 +14,7 @@ $dark-blue: #1f2739;
 $dark-blue-1: #1e2739;
 $black-blue: #161c2a;
 $gray: #5c5d5f;
+$web-gray: #f1f3f6;
 $web-blue: #2d3e50;
 
 // Theme Colors
