--- a/_scss/modules/_config.scss
+++ b/_scss/modules/_config.scss
@@ -1,10 +1,10 @@
 // Typography
 $font-family: 'Titillium Web'; // Google Font
-$global-font-size: 17px;
+$global-font-size: 1rem;
 $text-font-size-1: 1.2rem;
 $text-font-size-2: 1.3rem;
-$title-font-size-1: 36px;
-$title-font-size-2: 56px;
+$title-font-size-1: 2.0rem;
+$title-font-size-2: 3rem;
 $title-font-size-3: 64px;
 
 // Animations Timing
