feat: add products page

--- a/_includes/sections/blog.html
+++ b/_includes/sections/blog.html
@@ -34,9 +34,8 @@
 
     <!-- View All Posts CTA -->
     <div class="row view-posts text-center">
-        <a href="blog/" class="link">
+        <a href="blog/" class="link link--arrow">
           Read More
-          <i class="pe-7s-angle-right"></i>
         </a>
     </div>
 
