--- a/_includes/sections/features.html
+++ b/_includes/sections/features.html
@@ -14,9 +14,8 @@
         <p class="feature-description">
           {{ feature.description }}
         </p>
-        <a class="feature-link link" href="{{ feature.link-url }}">
+        <a class="feature-link link link--arrow" href="{{ feature.link-url }}">
           {{ feature.link-text }}
-          <i class="pe-7s-angle-right"></i>
         </a>
       </div>
       <div
@@ -36,9 +35,8 @@
         </a>
       </div>
       <div class="col-xs-12 col-sm-6">
-        <a class="link">
+        <a class="link link--arrow">
           LEARN MORE
-          <i class="pe-7s-angle-right"></i>
         </a>
       </div>
     </div>
