--- a/_includes/sections/hero.html
+++ b/_includes/sections/hero.html
@@ -16,9 +16,8 @@
           <a class="button action-button">
             Download <span class="company-name">dDrive<span>TM</span></span> for MacOS
           </a>
-          <a class="link link--white" href="">
+          <a class="link link--white link--arrow" href="">
             LEARN MORE
-            <i class="pe-7s-angle-right"></i>
           </a>
           <div class="action-descriptoin">
             Available for <a href="">Windows</a>, <a href="">MacOS</a>, and <a href="">Linux</a> (<a href="">Raspberry Pi</a>)
