--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -106,6 +106,7 @@
         "layout/_features",
         "layout/_solutions",
         "layout/_solutions-download",
+        "layout/_products",
         "layout/_parallax-features",
         "layout/_blog",
         "layout/_team",
