--- a/_scss/components/_buttons.scss
+++ b/_scss/components/_buttons.scss
@@ -15,7 +15,7 @@
   max-width: 100%;
   padding: 0.8em 2em;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: $text-font-size-1;
   font-weight: bold;
   text-align: center;
   border-radius: 5px;
@@ -42,7 +42,7 @@
 
 // Links
 .link {
-  font-size: $text-font-size-2;
+  font-size: $text-font-size-1;
   text-transform: uppercase;
   color: $orange;
   display: flex;
@@ -60,6 +60,20 @@
 
   &--white {
     color: $white;
+  }
+
+  &--arrow {
+    position: relative;
+    display: inline-block;
+    &::after {
+      content: '\e684';
+      position: absolute;
+      font-weight: 700;
+      font-size: 1.6em;
+      font-family: '7-stroke';
+      top: calc(50% - 14px);
+      line-height: 30px;
+    }
   }
 }
 
